# salty_gmailer

./: .gitignore  Dockerfile  LICENSE.md  MANIFEST.in  Makefile  README.md  app.py  build.sh  compose.yaml  pyproject.toml  requirements.txt  run.sh  run_arm64.sh
.github/workflows/: docker-image.yml  python-app.yml
email_manager/: Dockerfile  README.Docker.md  README.md  app.py  compose.yaml  requirements.txt
rules/: archive.yaml  trash.yaml
src/: __main__.py  cli.py  logger.py  mailer.py  rule.py
tests/: test_app.py
